Added some ini checks Commented out master server settings on the config as it breaks the server if a gameserver.ini is nonexistant, it now correctly creates a default one that runs. Added create_build_folder.bat to copy Hes structure from the debug folders to '/build' in the root

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
+update/
 x64/
 x86/
 bld/
@@ -252,3 +253,4 @@ paket-files/
 *.sln.iml
 
 GameLibraries/
+/build
