--- a/HellionExtendedServer.Common/HellionExtendedServer.Common.csproj
+++ b/HellionExtendedServer.Common/HellionExtendedServer.Common.csproj
@@ -71,9 +71,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\GameServerIni.cs" />
+    <Compile Include="GameServerIni\GameServerINI.cs" />
     <Compile Include="GameServerIni\GameServerSettings.cs" />
     <Compile Include="GameServerIni\DefaultGameServerINI.cs" />
-    <Compile Include="GameServerIni\Properties.cs" />
+    <Compile Include="GameServerIni\GameServerProperties.cs" />
     <Compile Include="GameServerIni\Setting.cs" />
     <Compile Include="LogManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
