Implemented HES building its folder structure, and replacing missing files, including the libraries. More work on the GameServerINI Editor Added a Globals class to hold folder names, file names, etc. More work to the UpdateManager to handle hes autoupdates.

--- a/HellionExtendedServer.Common/HellionExtendedServer.Common.csproj
+++ b/HellionExtendedServer.Common/HellionExtendedServer.Common.csproj
@@ -75,6 +75,7 @@
     <Compile Include="GameServerIni\GameServerSettings.cs" />
     <Compile Include="GameServerIni\GameServerProperties.cs" />
     <Compile Include="GameServerIni\Setting.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="LogManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
