--- a/HellionExtendedServer/HellionExtendedServer.csproj
+++ b/HellionExtendedServer/HellionExtendedServer.csproj
@@ -135,8 +135,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrashDump.cs" />
+    <Compile Include="Modules\CrashDump.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="GUI\Forms\Updater\UpdateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Forms\Updater\UpdateForm.Designer.cs">
+      <DependentUpon>UpdateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Modules\FolderStructure.cs" />
     <Compile Include="Managers\Commands\Vanilla Commands\AddPerms.cs" />
     <Compile Include="Managers\Commands\Vanilla Commands\DelPerms.cs" />
@@ -152,14 +158,14 @@
     <Compile Include="Managers\Permission.cs" />
     <Compile Include="Managers\PermissionManager.cs" />
     <Compile Include="Managers\PemissionAttribute.cs" />
-    <Compile Include="Managers\Plugins\Browser\BBCodeHTML.cs" />
-    <Compile Include="Managers\Plugins\Browser\BrowserForm.cs">
+    <Compile Include="GUI\Forms\Browser\BBCodeHTML.cs" />
+    <Compile Include="GUI\Forms\Browser\BrowserForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Managers\Plugins\Browser\BrowserForm.Designer.cs">
+    <Compile Include="GUI\Forms\Browser\BrowserForm.Designer.cs">
       <DependentUpon>BrowserForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Managers\Plugins\Browser\PluginBrowser.cs" />
+    <Compile Include="GUI\Forms\Browser\PluginBrowser.cs" />
     <Compile Include="Modules\Config.cs" />
     <Compile Include="Modules\Localization.cs" />
     <Compile Include="Managers\Commands\Command.cs" />
@@ -174,7 +180,7 @@
     <Compile Include="Managers\Plugins\PluginInfo.cs" />
     <Compile Include="Managers\ServerInstance.cs" />
     <Compile Include="GUI\Objects\Vessel.cs" />
-    <Compile Include="Managers\Plugins\Browser\Resources.cs" />
+    <Compile Include="GUI\Forms\Browser\Resources.cs" />
     <Compile Include="Modules\SteamCMD.cs" />
     <Compile Include="ServerWrappers\ReflectionAssemblyWrapper.cs" />
     <Compile Include="ServerWrappers\Hellion.cs" />
@@ -190,12 +196,15 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Managers\UpdateManager.cs" />
+    <EmbeddedResource Include="GUI\Forms\Updater\UpdateForm.resx">
+      <DependentUpon>UpdateForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\HellionExtendedServer.Common.dll" />
     <EmbeddedResource Include="Resources\NLog.dll" />
     <EmbeddedResource Include="HESGui.resx">
       <DependentUpon>HESGui.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Managers\Plugins\Browser\BrowserForm.resx">
+    <EmbeddedResource Include="GUI\Forms\Browser\BrowserForm.resx">
       <DependentUpon>BrowserForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -209,6 +218,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Content Include="hesicon.ico" />
+    <None Include="Changes.md" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
