--- a/HellionExtendedServer/Resources/NLog.config
+++ b/HellionExtendedServer/Resources/NLog.config
@@ -31,11 +31,14 @@
 
     <target name="console" xsi:type="ColoredConsole"
       layout="${date:format=HH\:mm\:ss}|${message}" />
-        
+
     <target name="file" xsi:type="File" fileName="${basedir}/hes/logs/errorlog.txt"
       layout="${date:format=HH\:mm\:ss}|${level}|${stacktrace}|${message}" />
 
     <target name="chatlogfile" xsi:type="File" fileName="${basedir}/hes/logs/chatlog.txt"
+      layout="${date:format=HH\:mm\:ss}|${message}" />
+
+    <target name="chatlogfile" xsi:type="File" fileName="${basedir}/hes/logs/mainlog.txt"
       layout="${date:format=HH\:mm\:ss}|${message}" />
   </targets>
 
@@ -48,6 +51,7 @@
     -->
     <logger name="*" minlevel="Debug" writeTo="console" />
     <logger name="*" minlevel="Error" writeTo="file" />
-    <logger name="HellionExtendedServer.Controllers.NetworkController" minlevel="Info" writeTo="chatlogfile" />
+    <logger name="HellionExtendedServer.HES" minlevel="Info" maxlevel="Info" writeTo="mainlogfile" />
+    <logger name="HellionExtendedServer.Managers.NetworkController" minlevel="Info" writeTo="chatlogfile" />
   </rules>
 </nlog>
